--- a/Exam/exam_dryrun.ipynb
+++ b/Exam/exam_dryrun.ipynb
@@ -42,34 +42,34 @@
      "text": [
       "Collecting en-core-web-sm==3.3.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[K     |████████████████████████████████| 12.8 MB 7.0 MB/s eta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 12.8 MB 339 kB/s eta 0:00:01\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.4.0,>=3.3.0.dev0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from en-core-web-sm==3.3.0) (3.3.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (22.0)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.3.0)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (4.62.3)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.0.6)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.7.7)\n",
       "Requirement already satisfied: jinja2 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.0.2)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.26.0)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.21.2)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.7)\n",
-      "Requirement already satisfied: wasabi<1.1.0,>=0.9.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.10.1)\n",
       "Requirement already satisfied: thinc<8.1.0,>=8.0.14 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (8.0.15)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.9 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.0.11)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.4.3)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.0.4)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.8.2)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.6)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.0.6)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.7)\n",
       "Requirement already satisfied: setuptools in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (58.0.4)\n",
-      "Requirement already satisfied: pathy>=0.3.5 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.10.1)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.26.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (22.0)\n",
       "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.0.7)\n",
       "Requirement already satisfied: typer<0.5.0,>=0.3.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.4.2)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.6)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.7.7)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.9 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.0.11)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.8.2)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.4.3)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.0.4)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.10.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (4.62.3)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.21.2)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.9.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (0.10.1)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.3.0)\n",
       "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from pathy>=0.3.5->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (5.2.1)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (4.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.26.7)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (3.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2022.6.15)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (1.26.7)\n",
       "Requirement already satisfied: click<9.0.0,>=7.1.1 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from typer<0.5.0,>=0.3.0->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (8.0.4)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/miniconda3/envs/adaexam/lib/python3.9/site-packages (from jinja2->spacy<3.4.0,>=3.3.0.dev0->en-core-web-sm==3.3.0) (2.0.1)\n",
       "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 23:53:23) \n[Clang 12.0.0 ]"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
